{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 65,
  "lineage": "ffb46ed9-a2be-5444-b1ab-391e5172bc48",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089cb80aef4c6b37e",
            "arn": "arn:aws:ec2:ap-south-1:471112908246:instance/i-063c27bacb8ee1841",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063c27bacb8ee1841",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-043d397fcd3c4cee6",
            "private_dns": "ip-10-0-0-102.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.102",
            "public_ip": "15.207.16.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07d72f945832fc553",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a913b3f0d4ff56ef",
            "tags": {
              "Managed_By": "terraform",
              "Name": "04-resource-ec2-instance",
              "Project": "04-resources"
            },
            "tags_all": {
              "Managed_By": "terraform",
              "Name": "04-resource-ec2-instance",
              "Project": "04-resources"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eca78fb9b780af6b"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112908246:internet-gateway/igw-0022e13ea9dafa1c7",
            "id": "igw-0022e13ea9dafa1c7",
            "owner_id": "471112908246",
            "tags": {
              "Managed_By": "terraform",
              "Name": "04-resources-igw",
              "Project": "04-resources"
            },
            "tags_all": {
              "Managed_By": "terraform",
              "Name": "04-resources-igw",
              "Project": "04-resources"
            },
            "vpc_id": "vpc-00ca7bb6977f9fc77"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112908246:route-table/rtb-080301603259ecfdf",
            "id": "rtb-080301603259ecfdf",
            "owner_id": "471112908246",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0022e13ea9dafa1c7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Managed_By": "terraform",
              "Name": "04-resources-rtb",
              "Project": "04-resources"
            },
            "tags_all": {
              "Managed_By": "terraform",
              "Name": "04-resources-rtb",
              "Project": "04-resources"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ca7bb6977f9fc77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5efa6d6709dfd9d",
            "route_table_id": "rtb-080301603259ecfdf",
            "subnet_id": "subnet-0a913b3f0d4ff56ef"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112908246:security-group/sg-0eca78fb9b780af6b",
            "description": "Allow traffic from port 80 and 443",
            "egress": [],
            "id": "sg-0eca78fb9b780af6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-http-traffic",
            "name_prefix": "",
            "owner_id": "471112908246",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_By": "terraform",
              "Name": "04-project-sg",
              "Project": "04-resources"
            },
            "tags_all": {
              "Managed_By": "terraform",
              "Name": "04-project-sg",
              "Project": "04-resources"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ca7bb6977f9fc77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112908246:subnet/subnet-0a913b3f0d4ff56ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a913b3f0d4ff56ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112908246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_By": "terraform",
              "Name": "04-resources-public-subnet",
              "Project": "04-resources"
            },
            "tags_all": {
              "Managed_By": "terraform",
              "Name": "04-resources-public-subnet",
              "Project": "04-resources"
            },
            "vpc_id": "vpc-00ca7bb6977f9fc77"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112908246:vpc/vpc-00ca7bb6977f9fc77",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0198cceac99b7b8a7",
            "default_route_table_id": "rtb-09d958139e9e1bdb8",
            "default_security_group_id": "sg-044e8fb5728a39204",
            "dhcp_options_id": "dopt-0803cac0e73cb9578",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00ca7bb6977f9fc77",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09d958139e9e1bdb8",
            "owner_id": "471112908246",
            "tags": {
              "Managed_By": "terraform",
              "Name": "04-resources-vpc",
              "Project": "04-resources"
            },
            "tags_all": {
              "Managed_By": "terraform",
              "Name": "04-resources-vpc",
              "Project": "04-resources"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112908246:security-group-rule/sgr-0d232734c679b3a95",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0d232734c679b3a95",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eca78fb9b780af6b",
            "security_group_rule_id": "sgr-0d232734c679b3a95",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112908246:security-group-rule/sgr-0467208dc5832405f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0467208dc5832405f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eca78fb9b780af6b",
            "security_group_rule_id": "sgr-0467208dc5832405f",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}